Fixed the spacing in stories section

--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -44,8 +44,6 @@
 
   &__text {
     transform: skewX(12deg);
-    transform: translateX(-3rem) skewX(12deg);
-    margin-left: 1.5rem;
 
     @include respond(phone) {
       transform: translateX(-1.5rem) skewX(0deg);
